Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30757

No module named pylsp.plugins.rope_rename

XMLWordPrintable

    • Linux/X11
    • 5920d9cb9 (13.0)

      After an upgrade to creator 13 from the latest 12 version, pylsp no longer works. The error that shows up in the General Message tab upon creator startupĀ  and agreeing to let it install python-lsp-server is:

      Running "/usr/bin/python3 -m pip install 'python-lsp-server[all]' -t '/home/dev007/.config/QtProject/qtcreator/pylsp/Python 3.11.6'" to install Python Language Server.
      LanguageClient Python Language Server (/usr/bin/python3): Initialization error: ModuleNotFoundError: No module named 'pylsp.plugins.rope_rename'.
      LanguageClient Python Language Server (/usr/bin/python3): Unexpectedly finished.

        For Gerrit Dashboard: QTCREATORBUG-30757
        # Subject Branch Project Status CR V

            davschul David Schulz
            markmueller Mark Mueller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes