Python: remove rope_completion language server setting

Rope is not part of the default installation of the python-lsp-server
pypi package and enabling it by default results in an error at startup.

Fixes: QTCREATORBUG-30757
Change-Id: I975ac98d9f4c5b25f5be085461e5b626d3a93fbc
Reviewed-by: Christian Stenger <christian.stenger@qt.io>